# example_fastapi

./: README.md  pyproject.toml
app/: main.py
app/routers/: api.py
app/routers/v1/: jugueteria.py  linea_blanca.py
